samples/_failures_safe/1761320581_9547ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bf2b5f7.c: In function ‘main’:
./samples/SAFE/__tmp_9bf2b5f7.c:135:5: error: expected declaration or statement at end of input
  135 |     input_matrix(&mat1, "A");
      |     ^~~~~~~~~~~~
